force-app/main/default/objects/Acao__c/Acao__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para registrar ações operacionais associadas ao atendimento, incluindo controles de pausa de SLA.</description>
    <label>Ação</label>
    <nameField>
        <displayFormat>ACAO-{000000}</displayFormat>
        <label>Ação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>