force-app/main/default/objects/Acao__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona a ação operacional ao Case de atendimento.</description>
    <inlineHelpText>Informe o Case associado a esta ação operacional.</inlineHelpText>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ações</relationshipLabel>
    <relationshipName>Acoes</relationshipName>
    <type>Lookup</type>
</CustomField>