force-app/main/default/objects/Acao__c/fields/ComentarioEntrada__c.field-meta.xml
<CustomField>
    <fullName>ComentarioEntrada__c</fullName>
    <description>Comentário informado na abertura da ação operacional.</description>
    <inlineHelpText>Descreva o contexto de entrada da ação operacional.</inlineHelpText>
    <label>Comentário de Entrada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>