force-app/main/default/objects/Acao__c/fields/ComentarioSaida__c.field-meta.xml
<CustomField>
    <fullName>ComentarioSaida__c</fullName>
    <description>Comentário informado no encerramento da ação operacional.</description>
    <inlineHelpText>Descreva o contexto de saída da ação operacional.</inlineHelpText>
    <label>Comentário de Saída</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>