force-app/main/default/objects/Acao__c/fields/DataFim__c.field-meta.xml
<CustomField>
    <fullName>DataFim__c</fullName>
    <description>Registra a data e hora de fim da ação operacional.</description>
    <inlineHelpText>Data e hora em que a ação operacional foi encerrada.</inlineHelpText>
    <label>Data/Hora de Fim</label>
    <type>DateTime</type>
</CustomField>