force-app/main/default/objects/Acao__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Registra a data e hora de início da ação operacional.</description>
    <inlineHelpText>Data e hora em que a ação operacional foi iniciada.</inlineHelpText>
    <label>Data/Hora de Início</label>
    <type>DateTime</type>
</CustomField>