force-app/main/default/objects/Acao__c/fields/DuracaoMinutos__c.field-meta.xml
<CustomField>
    <fullName>DuracaoMinutos__c</fullName>
    <description>Calcula a duração da ação operacional em minutos quando houver data de fim.</description>
    <formula>IF(AND(NOT(ISBLANK(DataInicio__c)), NOT(ISBLANK(DataFim__c))), (DataFim__c - DataInicio__c) * 24 * 60, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duração calculada automaticamente entre o início e o fim da ação.</inlineHelpText>
    <label>Duração em Minutos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>