force-app/main/default/objects/Acao__c/fields/EtapaAnterior__c.field-meta.xml
<CustomField>
    <fullName>EtapaAnterior__c</fullName>
    <description>Armazena a etapa anterior do Case antes da entrada em acompanhamento.</description>
    <inlineHelpText>Valor preenchido automaticamente com a etapa anterior do atendimento.</inlineHelpText>
    <label>Etapa Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>