force-app/main/default/objects/Acao__c/fields/MotivoPausa__c.field-meta.xml
<CustomField>
    <fullName>MotivoPausa__c</fullName>
    <description>Registra o motivo operacional que justificou a pausa de SLA.</description>
    <inlineHelpText>Selecione o motivo que melhor explica por que o atendimento entrou em acompanhamento.</inlineHelpText>
    <label>Motivo da Pausa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operação externa</fullName>
            </value>
            <value>
                <fullName>Aguardando cliente</fullName>
            </value>
            <value>
                <fullName>Aguardando terceiro</fullName>
            </value>
            <value>
                <fullName>Aguardando movimentação operacional</fullName>
            </value>
            <value>
                <fullName>Aguardando documentação</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>