force-app/main/default/objects/Acao__c/fields/SlaPausado__c.field-meta.xml
<CustomField>
    <fullName>SlaPausado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que a ação operacional representa uma pausa de SLA.</description>
    <inlineHelpText>Marcado automaticamente quando a ação representa controle de pausa de SLA.</inlineHelpText>
    <label>SLA Pausado</label>
    <type>Checkbox</type>
</CustomField>