force-app/main/default/objects/Acao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indica o estado atual da ação operacional registrada.</description>
    <inlineHelpText>Use Ativo para ações em andamento e Encerrado ou Cancelado quando finalizadas.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Encerrado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>