force-app/main/default/objects/Acao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Identifica o tipo da ação operacional registrada.</description>
    <inlineHelpText>Selecione o tipo de ação operacional registrada para o atendimento.</inlineHelpText>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controle de Pausa</fullName>
                <default>true</default>
                <label>Controle de Pausa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>