force-app/main/default/objects/Acao__c/fields/UsuarioFim__c.field-meta.xml
<CustomField>
    <fullName>UsuarioFim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário que encerrou a ação operacional.</description>
    <inlineHelpText>Usuário responsável pelo encerramento da ação operacional.</inlineHelpText>
    <label>Usuário de Fim</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ações Encerradas</relationshipLabel>
    <relationshipName>AcoesEncerradas</relationshipName>
    <type>Lookup</type>
</CustomField>