force-app/main/default/objects/Acao__c/fields/UsuarioInicio__c.field-meta.xml
<CustomField>
    <fullName>UsuarioInicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário que iniciou a ação operacional.</description>
    <inlineHelpText>Usuário responsável pelo início da ação operacional.</inlineHelpText>
    <label>Usuário de Início</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ações Iniciadas</relationshipLabel>
    <relationshipName>AcoesIniciadas</relationshipName>
    <type>Lookup</type>
</CustomField>